--- a/solarify/templates/index.html
+++ b/solarify/templates/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 {% load static %}
-<title>Solarify</title>
+<title>Solarify {% block title%}  {% endblock%} </title>
 <link rel="stylesheet" href="{% static 'solarify/css/bootstrap.min.css' %}" type="text/css"/>
 <link rel="stylesheet" href="{% static 'solarify/css/jquery-ui.css' %}" type="text/css">
 <script src="{% static 'solarify/js/jquery.min.js' %}" type="text/javascript"></script>
@@ -257,7 +257,7 @@ $(function() {
                     xAxes:[{
                         type: 'time',
                         time: {
-                            unit: '{{unit|safe'}},
+                            unit: '{{unit|safe}}',
                             tooltipFormat: 'YYYY-MM-DD HH:mm'
                         }
                     }],
@@ -276,5 +276,23 @@ $(function() {
         DrawSolarTrend("SolarTrend");
     };
     </script>
-</body>
+        
+
+        
+    
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+    </body>
 </html>
