--- a/solarify/templates/base_auth.html
+++ b/solarify/templates/base_auth.html
@@ -14,13 +14,23 @@
   </head>
   <body>
 
-    <main role="main">
+    <div class="container-fluid">
+      <div class="row">
 
+        <main role="main" class="col-md-12"><div class="card">
+      
+    </div>
+          <div class="col-md-3">
 
+          </div>
+      <div class="col-md-6">
 
       {% block content %}
 
-      {% endblock %}
+       {% endblock %}
+      </div>
+      <div class="col-md-3">
+      </div>
 
 
     </main>
