--- a/solarify/templates/base.html
+++ b/solarify/templates/base.html
@@ -59,14 +59,10 @@
     <script>
       window.jQuery ||
         document.write(
-          '<script src="/docs/4.4/static/js/vendor/jquery.slim.min.js"><\/script>'
+          '<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>'
         );
     </script>
-    <script
-      src="/docs/4.4/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
      <script src="{% static 'js/main.js' %}"></script>
   </body>
