--- a/solarify/templates/production/edit_production.html
+++ b/solarify/templates/production/edit_production.html
@@ -29,12 +29,12 @@
       <form action="{% url 'production-edit' production.id %}" method="post">
         {% include 'partials/_messages.html'%} {% csrf_token %}
         <div class="form-group">
-          <label for="">Amount</label>
+          <label for="">power</label>
           <input
             type="text"
             class="form-control form-control-sm"
-            name="amount"
-            value="{{values.amount}}"
+            name="power"
+            value="{{values.power}}"
           />
         </div>
         <div class="form-group">
