--- a/solarify/templates/partials/_sidebar.html
+++ b/solarify/templates/partials/_sidebar.html
@@ -23,7 +23,7 @@
     <h6
       class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"
     >
-      <span>Summary</span>
+      <span>summary</span>
       <a
         class="d-flex align-items-center text-muted"
         href="#"
@@ -35,13 +35,13 @@
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
         <a class="nav-link" href="{% url 'stats'%}">
-          usage Summary
+          usage summary
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">
           <span data-feather="file-text"></span>
-          production Summary
+          production summary
         </a>
       </li>
     </ul>
