--- a/solarify/templates/production/index.html
+++ b/solarify/templates/production/index.html
@@ -43,7 +43,7 @@
   <table class="table table-stripped table-hover">
     <thead>
       <tr>
-        <th>power ({{currency}})</th>
+        <th>power ({{unit}})</th>
         <th>Source</th>
         <th>Description</th>
         <th>Date</th>
@@ -80,7 +80,7 @@
       <table class="table table-stripped table-hover">
         <thead>
           <tr>
-            <th>power ({{currency}})</th>
+            <th>power ({{unit}})</th>
             <th>Source</th>
             <th>Description</th>
             <th>Date</th>
