--- a/solarify/templates/production/edit_production.html
+++ b/solarify/templates/production/edit_production.html
@@ -47,7 +47,7 @@
           />
         </div>
         <div class="form-group">
-          <label for="">Source</label>
+          <label for="">hybrid</label>
           <select class="form-control" name="source">
             <option selected name="source" value="{{values.source}}"
               >{{values.source}}</option
