--- a/solarify/templates/production/index.html
+++ b/solarify/templates/production/index.html
@@ -44,7 +44,7 @@
     <thead>
       <tr>
         <th>power ({{unit}})</th>
-        <th>Source</th>
+        <th>hybrid</th>
         <th>Description</th>
         <th>Date</th>
         <th></th>
@@ -81,7 +81,7 @@
         <thead>
           <tr>
             <th>power ({{unit}})</th>
-            <th>Source</th>
+            <th>hybrid</th>
             <th>Description</th>
             <th>Date</th>
             <th></th>
