--- a/solarify/templates/production/stats.html
+++ b/solarify/templates/production/stats.html
@@ -10,7 +10,7 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="">usage Summary</a>
+            <a href="">production Summary</a>
           </li>
           <li class="breadcrumb-item active" aria-current="page">
            Summary
